# adversarial-defence-framework-research-practicum-part-2

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.bat  setup.bat
configs/: default.yaml
data/adversarial/: DATASHEET.md  LICENSE  taxonomy.yaml
docs/: THREAT_TAXONOMY.md
eval/: humaneval.py  latency.py  runner.py
eval/baselines/: baseline.py
eval/metrics/: code_quality.py  metrics.py  oracle.py
eval/stats/: significance.py
results/excels/: evaluation_results.xlsx  test_cases.xlsx
results/excels/raw_outputs/: adversarial_codellama.xlsx  adversarial_gpt4o.xlsx  humaneval_gpt4o.xlsx  latency_profile.xlsx  llmseceval_codellama.xlsx  llmseceval_gpt4o.xlsx  securityeval-gen_gpt4o.xlsx  securityeval.xlsx
samples/: hardcoded_credentials.py  runtime_network_egress.py  safe_parameterised.py  vuln_input_validation.py  vuln_sql_injection.py
src/adf/: __init__.py  cli.py
src/adf/common/: config.py  datasets.py  logging.py  results.py  types.py
src/adf/integration/: pipeline.py  trust_score.py
src/adf/layer1_sanitiser/: classifier.py  patterns.py  sanitiser.py
src/adf/layer2_ast_cwe/: ast_analyzer.py  detector.py  semgrep_scanner.py
src/adf/layer3_sandbox/: docker_runner.py  security_tests.py  validator.py
src/adf/llm/: __init__.py  base.py  codellama_client.py  openai_client.py
tests/: test_ast_analyzer.py  test_codellama.py  test_datasets.py  test_detector.py  test_evaluation.py  test_layer3.py  test_metrics.py  test_oracle.py  test_pipeline.py  test_property.py  test_sanitiser.py
(+1 files in other folders)
